--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
   <p >click here....<br>This will show the time</p>
   </div></div>
   </div>
-  <script src="index.js" ></script>
+  <script src="script.js" ></script>
     </body><html>
